# llvm-project

./: README_LLVMGPUOffload.md  README_XEGPU.md  base_commit.sha  patches.list
mlir/: CMakeLists.txt
mlir/cmake/modules/: FindSyclRuntime.cmake  VCIntrinsics.cmake
mlir/include/mlir/: InitAllDialects.h  InitAllExtensions.h
mlir/include/mlir/Config/: mlir-config.h.cmake
mlir/include/mlir/Conversion/: Passes.h  Passes.td
mlir/lib/Conversion/: CMakeLists.txt
mlir/lib/Conversion/GPUCommon/: GPUToLLVMConversion.cpp
mlir/lib/Conversion/GPUToSPIR/: CMakeLists.txt  GPUToSPIRPass.cpp
mlir/lib/Conversion/GPUToSPIRV/: GPUToSPIRV.cpp  GPUToSPIRVPass.cpp
mlir/lib/Conversion/GPUToVC/: CMakeLists.txt  GPUToVCPass.cpp
mlir/lib/Conversion/XeGPUToVC/: CMakeLists.txt  XeGPUToVC.cpp
mlir/lib/Conversion/XeGPUToXeVM/: CMakeLists.txt  XeGPUToXeVM.cpp
mlir/lib/Conversion/XeVMToLLVM/: XeVMToLLVM.cpp
mlir/lib/Dialect/GPU/: CMakeLists.txt
mlir/lib/Dialect/LLVMIR/: CMakeLists.txt
mlir/lib/ExecutionEngine/: CMakeLists.txt  OneAPIUnifiedRuntimeWrappers.cpp  OpenCLRuntimeWrappers.cpp  SyclRuntimeWrappers.cpp
mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir/test/Conversion/GPUCommon/: lower-alloc-to-gpu-runtime-calls.mlir
mlir/test/Conversion/GPUToSPIR/: builtins-opencl.mlir  builtins.mlir
mlir/test/Conversion/GPUToSPIRV/: gpu-to-spirv-opencl.mlir
mlir/test/Conversion/GPUToVC/: builtins-opencl.mlir
mlir/test/Conversion/XeGPUToXeVM/: dpas.mlir  loadstore_nd.mlir  prefetch_nd.mlir
mlir/test/Conversion/XeVMToLLVM/: xevm-to-llvm.mlir
(+69 files in other folders)
